# orderbook

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.stress.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: pages.yml
cmd/api/: main.go
cmd/stress/: main.go
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/dashboards/json/: orderbook.json
deploy/prometheus/: prometheus.yml
docs/: GITHUB_ABOUT.md  GITHUB_PAGES.md  Gemfile  ORDERBOOK.md  PRD.md  README.md  SCALING.md  TESTING.md  TRADEOFFS.md  _config.yml  benchmarks.md  index.md  stress.md
docs/_includes/: head-custom.html
docs/assets/css/: custom.css
internal/api/: handlers.go  integration_test.go
internal/events/: bus.go
internal/matching/: engine.go  manager.go  orderbook.go  orderbook_test.go  priceheap.go
internal/matching/rustclient/: client.go  client_test.go
internal/middleware/: ratelimit.go
internal/models/: models.go
internal/observability/: metrics.go
internal/store/: events.go  migrate.go  store.go  store_test.go
internal/store/migrations/: 001_init.sql  002_events.sql
internal/ws/: hub.go
matcher/: Cargo.toml  Dockerfile
matcher/src/: main.rs  orderbook.rs
